# engram

./: .gitignore  LICENSE  PLAN.md  README.md  V3 Technical-Breakdown.md  V6 Context-Mapper-Proposal.md  diff.txt  glama.json  inspect_folder_file_sizes.sh  package-lock.json  package.json  test-mcp.js
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
adapter/: package-lock.json  package.json  server.json
adapter/src/: formatter.ts  index.ts  mcp-server.ts  process-bridge.ts  types.ts  version-check.ts
adapter/tests/: formatter.test.ts  process-bridge.test.ts
core/: Cargo.toml
core/src/: cli.rs  indexing.rs  knowledge.rs  lib.rs  main.rs  metrics.rs  persistence.rs  risk.rs  temporal.rs  test_intents.rs  types.rs
core/tests/: perf_linux.rs
e2e/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
e2e/tests/: blast-radius.test.ts  coupling-gate.test.ts  error-handling.test.ts  latency.test.ts  memories.test.ts  metrics.test.ts  risk-scoring.test.ts  setup.ts  test-intents.test.ts
e2e/tests/helpers/: mcp-client.ts
fixtures/: package-lock.json  package.json
fixtures/src/: repo-generator.ts
fixtures/src/scenarios/: coupled-files.ts  coupling-gate.ts  memories.ts  risk-scoring.ts  test-intents.ts
npm/@spectra-g/engram-core-darwin-arm64/: package.json
npm/@spectra-g/engram-core-darwin-x64/: package.json
npm/@spectra-g/engram-core-linux-arm64/: package.json
npm/@spectra-g/engram-core-linux-x64/: package.json
npm/@spectra-g/engram-core-win32-x64/: package.json
scripts/: set-version.sh
