[package]
name = "engram-core"
version = "0.2.7"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
rusqlite = { version = "0.33", features = ["bundled"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
